Update the names of functions

--- a/arches_arcgispro_addin/CreateResource.xaml
+++ b/arches_arcgispro_addin/CreateResource.xaml
@@ -31,7 +31,7 @@
             </TextBlock>
         </>
 
-        <Button Content="Get Geometry Node Info" HorizontalAlignment="Left" Margin="20,20,0,0" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="300" Click="Button_Click" /-->
+        <Button Content="Get Geometry Node Info" HorizontalAlignment="Left" Margin="20,20,0,0" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="300" Click="GetNodeList_Button" /-->
 
         <TextBlock HorizontalAlignment="Left" Margin="20,20,0,0" Grid.Row="1" Text="Select a Resource" VerticalAlignment="Top"/>
 
@@ -42,18 +42,18 @@
         <TextBlock HorizontalAlignment="Left" Margin="20,100,0,0" Grid.Row="1" VerticalAlignment="Top" TextWrapping="WrapWithOverflow" Width="300"
             Text="Select a feature(s) from the map; upload to Arches to create a new Resource Instance" />
         <Button Name="SubmitButton" Content="Upload Geometry to Arches" HorizontalAlignment="Left" Margin="20,140,0,0" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="300"
-                IsEnabled="{Binding NodeSelected}" Click="Button_Click_1" />
+                IsEnabled="{Binding NodeSelected}" Click="CreateUpload_Button" />
 
         <TextBlock HorizontalAlignment="Left" Margin="20,200,0,0" Grid.Row="1" VerticalAlignment="Top" Width="125" TextWrapping="WrapWithOverflow"
             Text="Uploaded Features:" />
-        <Button Content="Clear the List" HorizontalAlignment="Right" Margin="180,190,25,0" Grid.Row="1" VerticalAlignment="Top" Height="25"  Width="100" Click="Button_Click_3"/>
+        <Button Content="Clear the List" HorizontalAlignment="Right" Margin="180,190,25,0" Grid.Row="1" VerticalAlignment="Top" Height="25"  Width="100" Click="CreateClear_Button"/>
 
         <DataGrid HorizontalAlignment="Stretch" Height="Auto" Margin="0,230,0,0" Grid.Row="1" VerticalAlignment="Top" Width="Auto"
               ItemsSource="{Binding ResourceIdsCreated}" Style="{DynamicResource Esri_DataGrid}" 
               HeadersVisibility="None" AutoGenerateColumns="True" IsReadOnly="True" SelectionMode="Single" RowHeaderWidth="0"/>
 
         <Button Name="OpenChromiumButton" Content="Edit using Arches Resource Editor" HorizontalAlignment="Left" Margin="20,0,0,20" Grid.Row="1" VerticalAlignment="Bottom" Height="25" Width="300" 
-                IsEnabled="False" Command="{Binding ButtonClick2}" />
+                IsEnabled="False" Command="{Binding CreateOpenChromiumButton}" />
         <ComboBox HorizontalAlignment="Left" Margin="20,0,0,60" Grid.Row="1" VerticalAlignment="Bottom" Height="25" Width="300"
                 ItemsSource="{Binding ResourceIdsCreated}" DisplayMemberPath="Name"
                 SelectedItem="{Binding SelectedResourceId, Mode=TwoWay}" SelectedIndex="0" />
