Observe map selection to disable upload, #133

--- a/arches_arcgispro_addin/CreateResource.xaml
+++ b/arches_arcgispro_addin/CreateResource.xaml
@@ -42,7 +42,7 @@
         <TextBlock HorizontalAlignment="Left" Margin="20,100,0,0" Grid.Row="1" VerticalAlignment="Top" TextWrapping="WrapWithOverflow" Width="300"
             Text="Select a feature(s) from the map; upload to Arches to create a new Resource Instance" />
         <Button Name="SubmitButton" Content="Upload Geometry to Arches" HorizontalAlignment="Left" Margin="20,140,0,0" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="300"
-                IsEnabled="{Binding NodeSelected}" Click="CreateUpload_Button" />
+                IsEnabled="{Binding CanUpload}" Click="CreateUpload_Button" />
 
         <TextBlock HorizontalAlignment="Left" Margin="20,200,0,0" Grid.Row="1" VerticalAlignment="Top" Width="125" TextWrapping="WrapWithOverflow"
             Text="Uploaded Features:" />
